--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -8,3 +8,37 @@ and open the template in the editor.
     Author     : sampeng
 */
 
+.ui-panelgrid td, .ui-panelgrid tr
+{
+    border-style: none !important
+        background: transparent !important;
+}
+
+.buttongrid.ui-panelgrid>*>tr,
+.buttongrid.ui-panelgrid .ui-panelgrid-cell {
+    border: none;
+    background: transparent !important;
+}
+
+.formgrid.ui-panelgrid>*>tr,
+.formgrid.ui-panelgrid .ui-panelgrid-cell {
+    border-style: dotted !important;
+    
+    background: transparent !important;
+}
+.defaultMain{
+    width:98%;
+    margin : 0 auto;
+}
+
+.addFormOutputPanel{
+    width: 250px !important;
+    
+}
+.addFormOutputPanel label{
+    float:right !important;
+}
+
+.buttonStyle{
+    width:150px;  
+}
